fixed overflowing buttons and other components

--- a/public/css/farmer/farmer2phonenumber.css
+++ b/public/css/farmer/farmer2phonenumber.css
@@ -193,7 +193,7 @@ body {
   
     .right {
       width: 60%;
-      height: 100%;
+      height: 1000px;
       flex-grow: 1;
       display: flex;
       flex-direction: column;
@@ -220,7 +220,7 @@ body {
     }
   
     .reg {
-      width: 800px;
+      width: 80%;
       height: 50px;
       margin-bottom: 60px;
     }
@@ -230,7 +230,7 @@ body {
     }
   
     .irreg {
-      width: 800px;
+      width: 80%;
       height: 50px;
       margin-bottom: 60px;
       display: flex;
@@ -239,6 +239,7 @@ body {
    
     .irgFirst {
       width: 250px;
+      margin-right:10px;
     }
   
     .irgSecond {
