--- a/public/css/farmer/login.phoneNumber.css
+++ b/public/css/farmer/login.phoneNumber.css
@@ -193,7 +193,7 @@ body {
   
     .right {
       width: 60%;
-      height: 100%;
+      height: 1000px;
       flex-grow: 1;
       display: flex;
       flex-direction: column;
